--- a/style.css
+++ b/style.css
@@ -6,7 +6,15 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-
+.web{
+    font-size: 20px;
+    line-height: 20px;
+}
+.web2{
+    font-size: 20px;
+    font-style: oblique;
+    line-height: 20px;
+}
 a,
 button {
     transition: all .3s ease-in-out;
