--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@ nav .caret {
 
 .mg-lg {
     margin-top: 10px;
-    margin-bottom: 40px;
+    margin-bottom: 40px;    
 }
 
 .btn {
@@ -691,7 +691,7 @@ p {
 
 .tight-width-whitespace {
     max-width: 600px;
-    margin: auto auto auto auto;
+    margin: auto auto auto auto;    
 }
 
 .h1 {
@@ -728,7 +728,7 @@ h3 {
 .med-width-whitespace {
     max-width: 800px;
     margin: auto auto auto auto;
-    box-shadow: 0px 0px 0px #000000;
+    box-shadow: 0px 0px 0px black;
 }
 
 h1 {
